--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,3 +1,15 @@
 body{
-    background-color: aquamarine;
+    background: linear-gradient(90deg,rgb(129, 129, 129),rgb(56, 64, 61));
+}
+
+h1{
+    color:white
+}
+
+h2{
+    color:rgb(218, 218, 218)
+}
+
+a:link{
+    color:whitesmoke
 }
