--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,11 +1,37 @@
 header {
     position: fixed;
     width: 100%;
-    height: 160px;
+    height: 80px;
     background-color: #51f964;
-    text-align: center;
     margin: 0;
     padding: 0;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    text-align: center;
+}
+
+.title {
+    text-align: 0;
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+
+.tab {
+    padding: 0;
+    margin: 0;
+    padding-inline: 0;
+    text-align: center;
+    width: 100%;
+}
+
+.txt {
+    font-family: arial;
+    color: white;
+}
+
+.txt:hover {
+    color: rgb(9, 9, 9);
 }
 
 body {
@@ -16,11 +42,11 @@ div {
     width: 70%;
     padding-left: 15%;
     padding-right: 15%;
-    padding-top: 150px;
+    padding-top: 65px;
 }
 
 h2 {
-    color: #51f964;
+    color: #414141;
     left: 100px;
 }
 
@@ -34,38 +60,24 @@ a:hover {
 
 footer {
     height: 80px;
-    
+    width: 70%;
+
+    margin-left: 15%;
+
     background-color: #79b7b5;
     border-top: 2px solid rgb(0, 0, 0);
     border-bottom: 2px solid rgb(0, 0, 0);
 }
 
-.header-title {
-    color: white;
-
-}
-
-.header-item {
+.element {
+    padding: 0;
+    margin: 0;
     display: inline-block;
-    }
-
-.header-item-txt {
-    font-family: arial;
-    color: white;
-}
-
-.header-item-txt:hover {
-    color: rgb(9, 9, 9);
-}
-
-.header-group {
-    padding-inline: 0;
-    border-top: 2px solid black;
-    width: 100%;
 }
 
 .content-header {
     color: #51f964;
+    text-align: center;
     border-top: 5px double rgb(0, 0, 0);
     border-bottom: 5px double rgb(0, 0, 0);
 }
