--- a/CSS/Unity.css
+++ b/CSS/Unity.css
@@ -52,8 +52,7 @@ div {
 }
 
 h2 {
-    background-color: rgb(238, 158, 238);
-    color: #ffffff;
+    color: #414141;
     left: 100px;
 }
 
@@ -73,7 +72,6 @@ footer {
     border-top: 2px solid rgb(0, 0, 0);
     border-bottom: 2px solid rgb(0, 0, 0);
 }
-
 
 .content-header {
     color: #51f964;
