--- a/CSS/Unity.css
+++ b/CSS/Unity.css
@@ -38,6 +38,14 @@ header {
         margin: 0;
         display: inline-block;
     }
+
+    a:link {
+        color: whitesmoke;
+    }
+    
+    a:hover {
+        color: rgb(61, 61, 61);
+    }
 }
 
 body {
@@ -45,36 +53,45 @@ body {
 }
 
 div {
-    width: 70%;
-    padding-left: 15%;
-    padding-right: 15%;
+    width: 60%;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-top: 65px;
 }
 
 h2 {
-    color: #414141;
+    background-color: rgb(238, 158, 238);
+    color: #ffffff;
     left: 100px;
 }
 
 a:link {
-    color: whitesmoke;
+    color: rgb(0, 0, 0);
 }
 
-a:hover {
-    color: rgb(61, 61, 61);
+a:link:hover {
+    color: #51f964;
 }
 
 footer {
     height: 80px;
-    width: 70%;
-    margin-left: 15%;
+    width: 60%;
+    margin-left: 20%;
     background-color: #79b7b5;
     border-top: 2px solid rgb(0, 0, 0);
     border-bottom: 2px solid rgb(0, 0, 0);
+
+    a:link {
+        color: whitesmoke;
+    }
+    
+    a:hover {
+        color: rgb(61, 61, 61);
+    }
 }
 
 .content-header {
-    color: rgb(238, 158, 238);
+    color: #51f964;
     text-align: center;
     border-top: 5px double rgb(0, 0, 0);
     border-bottom: 5px double rgb(0, 0, 0);
@@ -83,6 +100,8 @@ footer {
 .unity-img {
     display:block;
     text-align: left;
+    margin: 0;
+    padding: 0;
     border: 4px solid #51f964;
     width: 576px;
     height: 324px;
