--- a/CSS/Unity.css
+++ b/CSS/Unity.css
@@ -2,7 +2,7 @@ header {
     position: fixed;
     width: 100%;
     height: 80px;
-    background-color: #51f964;
+    background-color: #51daf9;
     margin: 0;
     padding: 0;
     border-top: 1px solid black;
@@ -60,7 +60,7 @@ div {
 }
 
 h2 {
-    background-color: rgb(238, 158, 238);
+    background-color: rgb(160, 160, 160);
     color: #ffffff;
     left: 100px;
 }
@@ -91,7 +91,7 @@ footer {
 }
 
 .content-header {
-    color: #51f964;
+    color: #f78df5;
     text-align: center;
     border-top: 5px double rgb(0, 0, 0);
     border-bottom: 5px double rgb(0, 0, 0);
