--- a/CSS/Unity.css
+++ b/CSS/Unity.css
@@ -60,8 +60,10 @@ div {
 }
 
 h2 {
-    background-color: rgb(160, 160, 160);
+    background-color: rgb(184, 184, 184);
     color: #ffffff;
+    border-radius: 3px;
+    border-top:solid 4px #686868;
     left: 100px;
 }
 
@@ -85,8 +87,8 @@ footer {
         color: whitesmoke;
     }
     
-    a:hover {
-        color: rgb(61, 61, 61);
+    a:link:hover {
+        color: rgb(93, 93, 93);
     }
 }
 
@@ -102,7 +104,7 @@ footer {
     text-align: left;
     margin: 0;
     padding: 0;
-    border: 4px solid #51f964;
+    border: 4px solid #5aeef9;
     width: 576px;
     height: 324px;
 }
