--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -10,10 +10,11 @@ header {
     text-align: center;
 
     .title {
-        text-align: 0;
+        text-align: center;
         color: white;
         margin: 0;
         padding: 0;
+        
     }
 
     .tab {
